--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p> I have a pet Dog ,I have 2 younger sisters , I love my family.</p>
+                <p> I have a pet Dog and bird.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p> I have 2 younger sister. </p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p> I love my family.</p>
             </div>
         </div>
     </div>
