--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- First Container -->
     <div class="container-fluid bg-1 text-center">
         <!--<h1 class="margin">Name</h1>-->
-        <img src="img/logo" class="img-fluid" alt="Logo" id="logo">
+        <img src="img/logo.png.png" class="img-fluid" alt="Logo" id="logo">
     </div>
 
     <!-- Second Container -->
@@ -75,13 +75,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p> I have a pet Dog and bird.</p>
+                <p> I have a pet Dog and bird</p>
             </div>
             <div class="col-sm-4">
-                <p> I have 2 younger sister. </p>
+                <p> I have 2 younger sister </p>
             </div>
             <div class="col-sm-4">
-                <p> I love my family.</p>
+                <p> I love my family</p>
             </div>
         </div>
     </div>
