--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center" id="projects">
         <h3 class="margin">Projects</h3>
-        <p>Coming soon!</p>
+        <p></p>
         <div class="container">
             <div class="row">
 
@@ -71,7 +71,7 @@
                             <h5 class="card-title">Pupilpath login Website</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">I made a exact copy of the Puilpath login website.</p>
-                            <a href="#projects/pupilpath-login.html" class="card-link">More</a>
+                            <a href="projects/pupilpath-login.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
