--- a/projects/pupilpath-login.html
+++ b/projects/pupilpath-login.html
@@ -46,8 +46,8 @@
             <h1 class="margin text-center">Puilpath login Copycat Website</h1>
             <p>I learned how to make a button</p>
             <p>I made a Website with a gradient background.</p>
-            <a href="#https://kimberly-copycat-website-project.kimberlya0114.repl.co/?">Preview of my project</a><br>
-             <a href="#https://repl.it/@Kimberlya0114/Kimberly-Copycat-Website-Project#index.html">The code behind my project </a><br>
+            <a href="https://kimberly-copycat-website-project.kimberlya0114.repl.co/?">Preview of my project</a><br>
+             <a href="https://repl.it/@Kimberlya0114/Kimberly-Copycat-Website-Project#index.html">The code behind my project </a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a>-->
