--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
         </a>
     </div>
 
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">CYOA</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
+                            <p class="card-text">I learned how to solve Merge conflicts.</p>
+                            <a href="projects/Cyoa-setup.html" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
+
+
     <!-- Third Container (Grid) -->
     <div class="container-fluid bg-3 text-center">
         <h3 class="margin">About Me</h3><br>
