--- a/projects/Cyoa-setup.html
+++ b/projects/Cyoa-setup.html
@@ -44,7 +44,7 @@
         <div class="container">
 
             <h1 class="margin text-center">CYOA Project</h1>
-            <p>The teacher assigned this project as a fun way to pratice how to collaborte with people when using your IDE and github.</p>
+            <p>The teacher assigned this project as a fun way to pratice how to collaborte with people when using our IDE and github.</p>
             <p>The challenges of this project was the communication between me and my partners and also solving Merge conflicts</p>
             <p> If I had more time I would have added images to make the project so more interesting.</p>
             <a href="https://github.com/graced2739/cyoa-setup">Link about the project</a><br>
